--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.2",
     "lightweight-charts": "^4.1.3",
     "lucide-react": "^0.344.0",
+    "openai": "^4.80.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
