--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.2",
+    "dotenv": "^16.4.7",
     "lightweight-charts": "^4.1.3",
     "lucide-react": "^0.344.0",
     "openai": "^4.80.1",
