--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "chart.js": "^4.4.2",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "lightweight-charts": "^4.1.3",
     "lucide-react": "^0.344.0",
     "openai": "^4.80.1",
