--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "lightweight-charts": "^4.1.3",
     "lucide-react": "^0.344.0",
     "openai": "^4.80.1",
