--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
+        "edgedb": "^1.5.12",
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
         "openai": "^4.80.1"
