refactor: update timestamp handling and add @edgedb/generate dependency
- Updated `timestamp` fields in `insertFetchedTweetsAndTwineets` to use `new Date()` instead of `new Date().toISOString()` for consistency with EdgeDB's datetime type.
- Added `@edgedb/generate` v0.5.6 as a dependency to enable TypeScript query builder generation.
- Ignored `dbschema/edgeql-js` in `.gitignore` to exclude generated files from version control.

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
         "build": "vite build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "mg-cloud-gen": "edgedb migration create && edgedb migrate && edgedb migrate -I mollybeach/twindb && npm generate edgeql-js && edgedb migrate -I mollybeach/twindb && npm generate edgeql-js",
-        "generate-edgeql": "edgedb generate edgeql-js"
+        "mg-cloud-gen": "edgedb migration create && edgedb migrate && edgedb migrate -I mollybeach/twindb && npx @edgedb/generate edgeql-js && edgedb migrate -I mollybeach/twindb && npx @edgedb/generate edgeql-js"
     },
     "dependencies": {
+        "@edgedb/generate": "^0.5.6",
         "axios": "^1.7.9",
         "chart.js": "^4.4.2",
         "dotenv": "^16.4.7",
