--- a/server/package.json
+++ b/server/package.json
@@ -17,5 +17,10 @@
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
         "openai": "^4.80.1"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.0",
+        "typescript": "^5.7.3"
     }
 }
