--- a/package.json
+++ b/package.json
@@ -1,46 +1,64 @@
 {
-    "name": "vite-react-typescript-starter",
+    "name": "twin",
     "private": true,
     "version": "0.0.0",
-    "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint .",
-        "preview": "vite preview",
-        "mg-cloud-gen": "edgedb migration create && edgedb migrate && edgedb migrate -I mollybeach/twindb && npx @edgedb/generate edgeql-js && edgedb migrate -I mollybeach/twindb && npx @edgedb/generate edgeql-js"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "preview": "next preview",
+        "mg-cloud-gen": "edgedb migration create && edgedb migrate && edgedb migrate -I mollybeach/twindb && npx @edgedb/generate edgeql-js && edgedb migrate -I mollybeach/twindb && npx @edgedb/generate edgeql-js",
+        "server-build": "tsc --noEmit --outDir dist",
+        "server-start": "ts-node -r tsconfig-paths/register api/index.ts",
+        "server-dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register api/index.ts",
+        "server-watch": "tsc --watch"
     },
     "dependencies": {
         "@edgedb/generate": "^0.5.6",
+        "assert": "^2.1.0",
         "axios": "^1.7.9",
+        "browserify-zlib": "^0.2.0",
         "chart.js": "^4.4.2",
+        "cors": "^2.8.5",
+        "crypto-browserify": "^3.12.1",
         "dotenv": "^16.4.7",
         "edgedb": "^1.5.12",
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
+        "https-browserify": "^1.0.0",
         "lightweight-charts": "^4.1.3",
         "lucide-react": "^0.344.0",
+        "next": "^15.1.6",
         "openai": "^4.80.1",
+        "process": "^0.11.10",
         "react": "^18.3.1",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.22.3",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
+        "url": "^0.11.4",
         "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.1",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.0",
         "@types/react": "^18.3.5",
         "@types/react-dom": "^18.3.0",
-        "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.18",
         "eslint": "^9.9.1",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.11",
         "globals": "^15.9.0",
+        "nodemon": "^2.0.22",
         "postcss": "^8.4.35",
         "tailwindcss": "^3.4.1",
+        "ts-node": "^10.9.2",
+        "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.2.0",
         "typescript": "^5.5.3",
-        "typescript-eslint": "^8.3.0",
-        "vite": "^5.4.2"
+        "typescript-eslint": "^8.3.0"
     }
 }
