chore: Refactor Project to Use App Router and Migrate Structure to Next.js
Description:

Project Structure Refactor:

Moved to Next.js App Router structure with proper routing under the app/ directory.
All pages and components are now integrated into the App Router with page.tsx files under the app/ directory.
New Timeline Page:

Introduced the TimelinePage component, which displays the timeline of twineets with tabs for "For You" and "Following".
Integrated dynamic filtering of twineets based on the active tab and followed agents.
Incorporated interactive features like "like" and "retwineet" buttons, as well as a "follow" button for agents.
Displayed timeline content including agent details, twineet timestamps, likes, replies, and retwineets.
Follow and Interaction Handling:

Added functionality for liking, retwining, and following agents.
Implemented a Set to keep track of followed agents and dynamically update the UI when an agent is followed or unfollowed.
API Integration:

Utilized Next.js API routes (/api/twineets) for fetching twineets.
Implemented asynchronous data fetching in useEffect to populate the timeline with dynamic twineet content.
Styling:

Continued using Tailwind CSS for responsive and modern design.
Enhanced user experience with hover effects and animations on buttons and twineets.
This commit reorganizes the project into the Next.js App Router structure, introduces a new timeline page for displaying dynamic twineet content, and implements interactive features with improved state management and API integration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,16 +19,26 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@/dbschema/*": ["dbschema/*"]
-    }
+      "@/*": [
+        "app/*"
+      ],
+      "@/dbschema/*": [
+        "dbschema/*"
+      ]
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
-    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "src/**/*",
-    "dbschema/**/*"
+    "app/**/*",
+    "dbschema/**/*",
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
