--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,9 +36,19 @@
     "**/*.ts",
     "**/*.tsx",
     "app/**/*",
-    "dbschema/**/*",
     "next-env.d.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "components/**/*",
+    "lib/**/*",
+    "types/**/*",
+    "styles/**/*",
+    "src/**/*",
+    "dbschema/**/*",
+    "src/training/**/*",
+    "src/scripts/**/*",
+    "src/index.ts",
+    "src",
+    "server/**/*",
   ],
   "exclude": [
     "node_modules"
