fix: Fix import paths and type declarations for EdgeQL module
- Adjusted `EdgeQL` interface and methods to utilize specific types (e.g., `AgentType`, `TwineetType`, etc.).
- Corrected import paths for `edgeql` module to align with project structure.
- Updated method signatures in `EdgeQL` interface to handle specific data types and ensure proper type safety.
- Enhanced query, insert, update, and select methods to work with specific entity types from the types directory.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,12 @@
       ],
       "@/dbschema/*": [
         "dbschema/*"
+      ],
+      "@/server/*": [
+        "server/*"
+      ],
+      "@/types/*": [
+        "types/*"
       ]
     },
   },
@@ -37,17 +43,12 @@
     "**/*.tsx",
     "app/**/*",
     "next-env.d.ts",
+    "edgeql-js.d.ts",
     ".next/types/**/*.ts",
     "components/**/*",
-    "lib/**/*",
     "types/**/*",
     "styles/**/*",
-    "src/**/*",
     "dbschema/**/*",
-    "src/training/**/*",
-    "src/scripts/**/*",
-    "src/index.ts",
-    "src",
     "server/**/*",
   ],
   "exclude": [
