--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "crypto-browserify": "^3.12.1",
         "dotenv": "^16.4.7",
         "edgedb": "^1.5.12",
+        "eslint-plugin-next": "^0.0.0",
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
         "https-browserify": "^1.0.0",
@@ -34,6 +35,7 @@
         "process": "^0.11.10",
         "react": "^18.3.1",
         "react-chartjs-2": "^5.2.0",
+        "react-dom": "^18.3.1",
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
         "url": "^0.11.4",
@@ -44,9 +46,9 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/react": "^18.3.5",
-        "@types/react-dom": "^18.3.0",
         "autoprefixer": "^10.4.18",
         "eslint": "^9.9.1",
+        "eslint-plugin-react": "^7.32.0",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.11",
         "globals": "^15.9.0",
