fix: Update ESLint include paths to include additional EdgeQL modules
- Added `dbschema/edgeql-js/**/*` and `dbschema/edgeql-js/modules/**/*` to ESLint's `include` paths to ensure EdgeQL-related files are linted properly.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,6 +49,8 @@
     "types/**/*",
     "styles/**/*",
     "dbschema/**/*",
+    "dbschema/edgeql-js/**/*",  
+    "dbschema/edgeql-js/modules/**/*",
     "server/**/*",
   ],
   "exclude": [
