fix: Update TypeScript paths to include EdgeQL module paths
- Added `@/dbschema/edgeql-js/*` and `@/dbschema/edgeql-js/modules/*` to TypeScript paths to properly resolve EdgeQL-related modules.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,12 @@
       "@/dbschema/*": [
         "dbschema/*"
       ],
+      "@/dbschema/edgeql-js/*": [
+        "dbschema/edgeql-js/*"
+      ],
+      "@/dbschema/edgeql-js/modules/*": [
+        "dbschema/edgeql-js/modules/*"
+      ],
       "@/server/*": [
         "server/*"
       ],
