chore: Update server start scripts and adjust dependency commands
- Updated `package.json` to consolidate server start and dev scripts, ensuring the correct command (`pnpm run start` or `pnpm run dev`) is used depending on the environment.
- Removed redundant server script definitions, leaving a single `server` script to start the backend server.
- Clarified installation instructions in the documentation to support `pnpm` setups.
- Ensured consistency across environment setup commands for smoother onboarding and configuration.

--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
         "lint": "next lint",
         "preview": "next preview",
         "mg-cloud-gen": "edgedb migration create && edgedb migrate && edgedb migrate -I mollybeach/twindb && npx @edgedb/generate edgeql-js && edgedb migrate -I mollybeach/twindb && npx @edgedb/generate edgeql-js",
-        "server-build": "tsc --noEmit --outDir dist",
-        "server-start": "ts-node -r tsconfig-paths/register server/index.ts",
-        "server-dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register server/index.ts",
-        "server-watch": "tsc --watch"
+        "server": "ts-node -r tsconfig-paths/register server/index.ts"
     },
     "dependencies": {
         "@edgedb/generate": "^0.5.6",
