--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "@types/react": "^18.3.5",
         "autoprefixer": "^10.4.18",
         "eslint": "^9.9.1",
-        "eslint-plugin-next": "^0.0.0",
+        "eslint-plugin-next": "0.0.0",
         "eslint-plugin-react": "^7.32.0",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.11",
