Working: Update API routes, data formatting, and agent insertion
- Created new API route for fetching agent data by agentId (`GET /api/agents/[agentId]/route.ts`).
- Refactored `insertAgent` function to handle agent insertion and return the created agent data.
- Added error handling for empty or missing agentId in the agent fetch API route.
- Updated `POST` request logic to handle response and error cases more effectively.
- Enhanced `formatData.ts` to ensure all data is validated and properly formatted before insertion.
- Updated `POST /api/twineets` route to support fetching twineets and handle errors gracefully.
- Refactored the `generateResponse` API to handle model responses from OpenAI.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,9 @@
       ],
       "@/types/*": [
         "types/*"
+      ],
+      "@/server/formatData/*": [
+        "server/formatData/*"
       ]
     },
   },
@@ -58,6 +61,7 @@
     "dbschema/edgeql-js/**/*",  
     "dbschema/edgeql-js/modules/**/*",
     "server/**/*",
+    "server/formatData/**/*"
   ],
   "exclude": [
     "node_modules"
