chore: Title: Refactored NotificationBar, API Integrations, and Improved Database Handling
Summary of changes:

NotificationBar Component:

Enhanced the NotificationBar component to manage multiple notifications and handle state transitions smoothly.
Introduced a flashing effect in the notification bar for better UX visibility.
Improved error handling by logging and displaying detailed notification information such as agentId, twitterHandle, twinHandle, and timestamp.
Notification System:

Updated the notification logic to handle a queue of notifications, ensuring the most recent notification is shown at the top.
The component dynamically updates the notification display based on the incoming notifications.
API Enhancements:

Implemented improved error handling and logging within the API routes, ensuring better traceability and robustness in case of failure.
Refactored API routes, ensuring better structure for easier future modifications and consistency in API responses.
EdgeDB Integration:

Enhanced the EdgeDB integration for inserting data related to agents, including complex nested objects like analytics, fetched tweets, and transactions.
Created recursive data formatting functions to insert deeply nested objects into EdgeDB with proper type casting.
Data Formatting for EdgeQL:

Implemented generic functions for converting JavaScript values into EdgeQL-compatible types such as edgeql.datetime and edgeql.decimal.
Introduced recursive data insertion for handling nested objects and arrays for better management of data in EdgeDB.
Key Details:

NotificationBar now efficiently manages notifications, supports flashing transitions, and provides more informative data in the UI.
EdgeDB client now inserts complex objects such as Analytics, Transactions, and Twineets with improved type handling and recursive formatting.
The new code simplifies adding nested data into the EdgeDB schema while ensuring proper casting and error handling.
Testing:

The notification system now cor

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "lint": "next lint",
         "preview": "next preview",
         "mg-cloud-gen": "edgedb migration create && edgedb migrate && edgedb migrate -I mollybeach/twindb && npx @edgedb/generate edgeql-js && edgedb migrate -I mollybeach/twindb && npx @edgedb/generate edgeql-js",
-        "server": "ts-node -r tsconfig-paths/register server/index.ts"
+        "server": "ts-node -r tsconfig-paths/register server/index.ts",
+        "typecheck": "tsc --noEmit"
     },
     "dependencies": {
         "@edgedb/generate": "^0.5.6",
