--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
+        "@types/node": "^22.13.1",
         "@types/react": "^18.3.5",
         "autoprefixer": "^10.4.18",
         "eslint": "^9.9.1",
