--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "lightweight-charts": "^4.1.3",
         "lucide-react": "^0.344.0",
         "next": "^15.1.6",
+        "node-cron": "^3.0.3",
         "openai": "^4.80.1",
         "process": "^0.11.10",
         "react": "^18.3.1",
@@ -45,6 +46,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/node": "^22.13.1",
+        "@types/node-cron": "^3.0.11",
         "@types/react": "^18.3.5",
         "autoprefixer": "^10.4.18",
         "eslint": "^9.9.1",
