--- a/package.json
+++ b/package.json
@@ -48,11 +48,14 @@
         "@types/node": "^22.13.1",
         "@types/node-cron": "^3.0.11",
         "@types/react": "^18.3.5",
+        "@typescript-eslint/eslint-plugin": "^8.23.0",
+        "@typescript-eslint/parser": "^8.23.0",
         "autoprefixer": "^10.4.18",
-        "eslint": "^9.9.1",
+        "eslint": "^9.19.0",
+        "eslint-config-next": "15.1.6",
         "eslint-plugin-next": "0.0.0",
-        "eslint-plugin-react": "^7.32.0",
-        "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.11",
         "globals": "^15.9.0",
         "nodemon": "^2.0.22",
