fix: Enhanced Tweet Handling and Twin Data Consistency
- Added `tweetId` to `FetchedTweetType` for better tracking.
- Updated Twitter API fetching to store `tweetId` separately from `edit_history_tweet_ids`.
- Adjusted EdgeDB queries to include `tweetId` in the database schema.
- Improved logging for debugging API responses.
- Refactored `getTweets` function to ensure `tweetId` is stored correctly.
- Updated default Twin descriptions with randomized personality traits.
- Fixed database instance name from `twindb` to `twinfundb` in EdgeDB configuration.
- Adjusted database migration script to match the updated instance name.
- Ensured `tweetId` is properly formatted when inserting and retrieving tweets.
- Improved sorting logic for `edit_history_tweet_ids` to prevent duplicate tweet tracking.
- Minor refactoring and cleanup of redundant code.

These updates improve tweet tracking, database consistency, and enhance the twin's data integrity.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "next start",
         "lint": "next lint",
         "preview": "next preview",
-        "mg-cloud-gen": "edgedb migration create && edgedb migrate && edgedb migrate -I mollybeach/twindb && npx @edgedb/generate edgeql-js && edgedb migrate -I mollybeach/twindb && npx @edgedb/generate edgeql-js",
+        "mg-cloud-gen": "edgedb migration create && edgedb migrate && edgedb migrate -I mollybeach/twinfundb && npx @edgedb/generate edgeql-js && edgedb migrate -I mollybeach/twinfundb && npx @edgedb/generate edgeql-js",
         "server": "ts-node -r tsconfig-paths/register server/index.ts",
         "typecheck": "tsc --noEmit"
     },
